Resolve "Add Ping route"
